Print CSS: Avoid page breaks inside <figure>

--- a/resources/src/mediawiki.legacy/commonPrint.css
+++ b/resources/src/mediawiki.legacy/commonPrint.css
@@ -84,6 +84,7 @@ pre,
 }
 
 img,
+figure,
 .wikitable,
 .thumb {
 	/* Pagination */
